specifying data with notations

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -127,7 +127,7 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
 We define realised interactions as those that can be directly inferred from the observed data (see \ref{meth:id_params} below), and estimate those interactions through 
 to which we assign a unique interaction parameter as described in the neighbour-density dependent model (\ref{meth:nddm}). 
 Independantly to this model, we also describe a response-impact model (\ref{meth:rim}) where elements have a singular effect on neighbours, and a singular response. This allows us to estimate unrealised interactions as the product of element-specific response and impact parameters. Both models contribute to the overall joint model likelihood as detailed in \ref{meth:addlog}.}
-Taken together, realised and unrealised interaction estimates are then used to populate community interaction matrices for the system that quantify the pairwise effects of all neighbours $j$ on all focal elements $i$. 
+Taken together, realised and unrealised interaction estimates are then used to populate community interaction matrices for the system that quantify the pairwise effects of all interaction partners on all focal elements. 
 
 %, i.e. when elements are observed to co-occur enough times and at varying densities such that the effect of one element on the performance of the other can be reliably estimated via regression. Conversely, the interaction effect of element $j$ on element $i$ is is deemed unrealised when there are none or too few measures of the performance of $i$ in the presence of varying densities of $j$. 
 
@@ -139,8 +139,7 @@ Taken together, realised and unrealised interaction estimates are then used to p
     The joint model framework was initially developed for an ecological dataset where interacting elements (species) affect each other's performance (lifetime reproductive success). This framework however, can be applied to data from any interacting elements (e.g. cells, individuals, populations, species) which meet the following criteria. First, observations must include some proxy for performance, such as growth (e.g. biomass), fecundity (e.g. number of eggs laid) or chemical production (e.g. oxygen). Second, these observations must also record the identity and abundance of elements which interact with each focal element. Lastly, observations should be replicated for each focal element with the aim to capture variation in the identities and densities of interaction partners. In addition to these requirements, the experimental design or data may also benefit from observations of focal elements with no interaction partners to better estimate intrinsic performance. \textbf{Changes: removed mention of 'interaction neighbourhood' and moved info about environment / interaction covariation to case study section. This is to generalise the method.}
 
     \paragraph{}
-    units 
-
+    We define $s$ as the number of focal elements $i$, $i \in \{ 1, .., s \}$, and $k$ as the number of interaction partners across all $s$ focals. Typically not all elements in the system will be respresented in the set of focals, such that $s \le k$. Measurements of the performance of individual units from each focal element (e.g. seed production of individual plants belonging to a set of focal species) are stored in a vector $p$ of length $n$. The abundance of interaction partners is stored in a matrix $X$, of size $n \times k$. Finally, the element identity of each of the $n$ focal individuals is stored in the vector $d$, of length $n$, and containing the index of the corresponding element: $d_i \in \{1, ..., s \}$.
     
     \subsection{Realised interactions}
     \label{meth:nddm}    
