methods / neighbour -> interacting elements

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -140,7 +140,7 @@ Taken together, realised and unrealised interaction estimates are then used to p
 
     \paragraph{}
     \textbf{
-    We define $s$ as the number of focal elements $i$, $i \in \{ 1, .., s \}$, and $k$ as the number of interacting elements $j$ across all $s$ focals, $j \in \{1, ..., k \}$. Typically not all elements in the system will be represented in the set of focals, such that $s \le k$. Measurements of the performance of individual units from each focal element (e.g. seed production of individual plants belonging to a set of focal species) are stored in a vector $p$ of length $n$. The abundance of interaction partners is stored in a matrix $X$, of size $n \times k$. Finally, the element identity of each of the $n$ focal individuals is stored in the vector $d$, of length $n$, and containing the index of the corresponding element: $d_i \in \{1, ..., s \}$.}
+    We define $s$ as the number of focal elements $i$, $i \in \{ 1, .., s \}$, and $k$ as the number of interacting elements $j$ across all $s$ focals, $j \in \{1, ..., k \}$. Typically not all elements in the system will be represented in the set of focals, such that $s \le k$. Measurements of the performance of individual units from each focal element (e.g. seed production of individual plants belonging to a set of focal species) are stored in a vector $p$ of length $n$. The abundance of interaction partners is stored in a matrix $X$, of size $n \times k$. If an element $j$ does not interact with $i$, it's abundance can simply be set to $0$ across measurements of $p_i$. Finally, the element identity of each of the $n$ focal individuals is stored in the vector $d$, of length $n$, and containing the index of the corresponding element: $d_i \in \{1, ..., s \}$.}
 
 
     \subsection{Identifying realised and unrealised interactions}
@@ -156,24 +156,25 @@ Taken together, realised and unrealised interaction estimates are then used to p
     \label{meth:nddm}    
 
         \paragraph{}
-        Realised interactions are quantified by regressing the performance of an element  - a species, population or any chosen set of replicated units - against the abundance and identity of it's neighbouring elements in a neighbour-density dependent model (NDDM).  Increases or decreases in an overall element's performance can thus be attributed to neighbouring elements which were observed to co-occur. 
+        Realised interactions are quantified by regressing the performance of an element  - a species, population or any chosen set of replicated units - against the abundance and identity of other interacting elements in a neighbour-density dependent model (NDDM).  Increases or decreases in an overall element's performance can thus be attributed to the abundance of its interaction partners. 
 
         \paragraph{}
-        We implement a neighbour density-dependent model to each focal element or species $i$ which regresses the identity and abundance of neighbours $j$ ($j = 1, 2, 3, ..., S$) against the measured proxy for performance $P_{i}$ through a link function $f$:
+        We implement a neighbour density-dependent model to each focal element or species $i$ which regresses the identity and abundance of elements $j$ ($j = 1, ..., k$) against the measured proxy for performance $p_{i}$ through a link function $f$:
         \begin{equation}
-        f(P_{i}) = \beta_{i0} - \sum_{j=1}^{S} \beta_{ij} N_{j}
+        f(p_{i}) = \beta_{i0} - \sum_{j=1}^{s} \beta_{ij} N_{j}
         \label{nddm}
         \end{equation}
-        The intercept $\beta_{i0}$ represents intrinsic performance (in the link scale), an element's performance \textbf{across all observations} in the absence of interactions with neighbours. $N_{j}$ are the abundances of neighbours recorded for each observation, and the $\beta_{ij}$ captures the \textbf{overall} effect of each neighbour $j$ on $i$. Note that neighbours can include other members of element $i$, in which case intraspecific interactions are denoted as $\beta_{ii}$.
+        \textbf{Note that $p_i$ refers to the subset of individual measurements of performance $p$ for a focal element $i$. [[Maybe better off calling it $P_{d_i}$ ?? Unsure if this makes sense.]]}
+        The intercept $\beta_{i0}$ represents intrinsic performance (in the link scale), an element's performance \textbf{across all observations} in the absence of interactions. $N_{j}$ are the abundances of interaction partners recorded for each observation, in effect a subset of matrix $X$, and the $\beta_{ij}$ captures the \textbf{overall} effect of each element $j$ on $i$. Note that interacting elements can include members of focal element $i$ itself, in which case intraspecific interactions are denoted as $\beta_{ii}$ and correspond to the diagonal of matrix $B$ \textbf{rerite equation following DBS?}.
 
         \paragraph{}
-        This model, as well as the RIM described below, are implemented as generalised linear models. This means that the relationship between $P_i$ and the right-hand side of the equation does not need to be linear, but can be modified to fit the data in question given an appropriate distribution and link function $f$, for example negative binomial and natural logarithm. 
+        This model, as well as the RIM described below, are implemented as generalised linear models. This means that the relationship between $p_i$ and the right-hand side of the equation does not need to be linear, but can be modified to fit the data in question given an appropriate distribution and link function $f$, for example negative binomial and natural logarithm. 
               
     \subsection{Unrealised interactions}
     \label{meth:rim}
 
     \paragraph{}
-       A common issue in ecological datasets is that some elements may not be observed to co-occur with many neighbours, or at variable enough densities, because data sampling is limited in space and time. The NDDM above will thus not be able to estimate all potential interactions ($\beta_{ij}$), especially for rare elements. These \textit{unrealised} interactions can be estimated by using an alternative model which assumes that elements typically have a singular impact ($e$) on and a singular response ($r$) to neighbours independent of neighbour identity (response and impact model, or RIM - see \cite{Godoy2014b}). An unrealised interaction is therefore the product of two element's impact and response parameters. 
+       A common issue in ecological datasets is that some elements may not be observed to interact with many other elements, or at variable enough densities, because data sampling is limited in space and time. The NDDM above will thus not be able to estimate all potential interactions ($\beta_{ij}$), especially for rare elements. These \textit{unrealised} interactions can be estimated by using an alternative model which assumes that elements typically have a singular impact ($e$) on and a singular response ($r$) to neighbours independent of neighbour identity (response and impact model, or RIM - see \cite{Godoy2014b}). An unrealised interaction is therefore the product of two element's impact and response parameters. 
         \begin{equation}
         P_{i} = \beta_{i0} - r_{i} \sum_{j=1}^{S} e_{j} N_{j}
         \label{rim}
@@ -212,7 +213,7 @@ Taken together, realised and unrealised interaction estimates are then used to p
     \subsection{Integrating interaction strengths into models of population dynamics}
 
         \paragraph{}
-        In certain instances, models of element population dynamics can be used to further extend the usefulness of the framework presented here. We suggest two cases where such an application may be useful. Firtly, the variable chosen to measure the performance of focal elements $P_i$ may not directly translate into a measure of performance which is relevant to system dynamics,  due to inherent practical constraints with collecting empirical data. For example, the life-history reproductive strategies of certain species may lead to measures of high fecundity (or performance) in the field which do not account for low survival rates post-observation \parencite{Broekman2020}. In these cases, population dynamics models can be used to account for species-specific demographic rates into estimates of interaction effects. Alternatively, we might be more interested in the effects of neighbours on the abundance or growth rate of a focal element rather than on it's performance. In this scenario, a population dynamic model can be used to translate interaction effects on the measured variable into interaction strengths affecting the variable of interest. 
+        In certain instances, models of element population dynamics can be used to further extend the usefulness of the framework presented here. We suggest two cases where such an application may be useful. Firtly, the variable chosen to measure the performance of focal elements $p_i$ may not directly translate into a measure of performance which is relevant to system dynamics,  due to inherent practical constraints with collecting empirical data. For example, the life-history reproductive strategies of certain species may lead to measures of high fecundity (or performance) in the field which do not account for low survival rates post-observation \parencite{Broekman2020}. In these cases, population dynamics models can be used to account for species-specific demographic rates into estimates of interaction effects. Alternatively, we might be more interested in the effects of interacting elements on the abundance or growth rate of a focal element rather than on it's performance. In this scenario, a population dynamic model can be used to translate interaction effects on the measured variable into interaction strengths affecting the variable of interest. 
 
         \paragraph{}
         In both cases, an established population dynamic model is required as well as knowledge of any crucial element-specific demographic rates. This step is illustrated for our case study in the Supplementary Methods \ref{SI:popdyn}, where an annual plant population dynamic model is used to transform effects on wildflower seed production (the measured proxy for performance) into effects on population growth, and includes species-specific estimates of seed germination and survival rates. 
